--- a/src/scss/modalmadness.scss
+++ b/src/scss/modalmadness.scss
@@ -8,7 +8,7 @@
       serif;
     font-size: 20px;
     color: #d77100;
-    background-color: #3a361f;
+    background-color: #000000;
   }
 
   // body
@@ -26,7 +26,7 @@
   .gallery-page-new {
     h1 {
       font-size: 3rem;
-      // font-weight: 300;
+      font-weight: 300;
       margin: 1rem 0;
       padding-left: 1rem;
       padding-right: 1rem;
